2004-12-11  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Support UserInfo via the Jabber vcard iq.

2004-12-08  Pascal Scheffers  <pascal@scheffers.net>

	* tkchat.tcl: Prevent multiple reconnect timers running at the same time.

2004-12-08  Reinhard Max  <max@suse.de>

	* tkchat.tcl (::tkchat::parseStr): Simplified the URL parsing
	regexp and added support for ftp URLs. It is much more relaxed in
	what it accepts as an URL now, and only tries hard to get the end
	right.
 
2004-12-08  Pascal Scheffers  <pascal@scheffers.net>

	* tkchat.tcl: /nick now asks any other egos you may have for a
	nick transfer.

2004-12-04  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Some support for sending memos. Needs more work to
	handle offline users properly.

2004-12-03  Pascal Scheffers  <pascal@scheffers.net>

	* tkchat.tcl: Sort the online users list -dictionary. Call [muc
	exit] to cleanup the roster for the chat. Fixed display of entry
	exit messages for web and irc users, added more entry/exit
	messages and color them.  /help now goes to
	http://wiki.tcl.tk/tkchat

2004-12-01  Pascal Scheffers  <pascal@scheffers.net>

	* tkchat.tcl: Added jabber resource in the connect
	dialog. Improved the reconnect code, it now actually tries again.

2004-12-01  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Remove the stupid /nolog prefix from the message
	body. It's already an attribute of the message.
	Use a 'real' uri for tkchat namespace attributes.
	Fix use of SSL when people have it in their Options but can't find
	the package anymore.

2004-11-26  Pascal Scheffers  <pascal@scheffers.net>

	* tkchat.tcl: First attempt at making tkchat work on a PockectPC

2004-11-25  Pascal Scheffers  <pascal@scheffers.net>

	* tkchat.tcl: URL re fix

2004-11-24  Pascal Scheffers  <pascal@scheffers.net>

	* tkchat.tcl: Removed /jest in favor of /ot/?me for /nolog shorthand.

2004-11-23  Reinhard Max  <max@suse.de>
